k8s/base/services/media/organizr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizr
  namespace: media
spec:
  selector:
    matchLabels:
      app: organizr
  template:
    metadata:
      labels:
        app: organizr
    spec:
      containers:
        - name: organizr
          image: ghcr.io/organizr/organizr:latest
          ports:
            - containerPort: 80
              name: webui
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: organizr-config
      restartPolicy: Always
