k8s/base/services/media/organizr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: organizr
  namespace: media
spec:
  selector:
    app: organizr
  ports:
    - port: 80
      targetPort: 80
      name: webui
