k8s/base/services/media/organizr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: organizr
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`organizr.lffl.internal`)
      kind: Rule
      services:
        - name: organizr
          port: 80
